simdX86/c2nimsrc/simdSse.h

__int64 _mm_cvttss_si64 (__m128 a);
__m128d _mm_div_pd (__m128d a, __m128d b);
__m128 _mm_div_ps (__m128 a, __m128 b);
__m128d _mm_div_sd (__m128d a, __m128d b);
__m128 _mm_div_ss (__m128 a, __m128 b);
__m128d _mm_dp_pd (__m128d a, __m128d b, const int imm8);
__m128 _mm_dp_ps (__m128 a, __m128 b, const int imm8);