simdX86/simdSseGeneric.nim

proc cvttss_si64*(a: m128): int64 {.importc: "_mm_cvttss_si64", header: "immintrin.h".}
proc `div`*(a: m128d; b: m128d): m128d {.importc: "_mm_div_pd", header: "immintrin.h".}
proc `div`*(a: m128; b: m128): m128 {.importc: "_mm_div_ps", header: "immintrin.h".}
proc div_sd*(a: m128d; b: m128d): m128d {.importc: "_mm_div_sd", header: "immintrin.h".}
proc div_ss*(a: m128; b: m128): m128 {.importc: "_mm_div_ss", header: "immintrin.h".}
proc dp*(a: m128d; b: m128d; imm8: cint): m128d {.importc: "_mm_dp_pd",
    header: "immintrin.h".}
proc dp*(a: m128; b: m128; imm8: cint): m128 {.importc: "_mm_dp_ps", header: "immintrin.h".}
## redundant: void _m_empty (void);
